# online-mart

./: compose.yaml
product_service/: .env  Dockerfile.dev  pyproject.toml
product_service/product_service/: main.py  settings.py
product_service/product_service/database/: db.py
product_service/product_service/models/: products.py
